--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    
+      <p>teste</p>
+      
+    </div>
 
     <script type="module" src="/main.js"></script>
   </body>
